@@ -20,6 +20,7 @@ CallInsList = {
 	"KeyPress",
 	"KeyRelease",
 	"TextInput",
+	"TextEditing",
 	"MouseMove",
 	"MousePress",
 	"MouseRelease",
@@ -118,4 +119,3 @@ end
 
 --------------------------------------------------------------------------------
 --------------------------------------------------------------------------------
-
