@@ -167,6 +167,7 @@ CALLIN_LIST = {
 	"KeyPress",
 	"KeyRelease",
 	"TextInput",
+	"TextEditing",
 	"MousePress",
 	"MouseRelease",
 	"MouseMove",
@@ -192,4 +193,3 @@ end
 
 --------------------------------------------------------------------------------
 --------------------------------------------------------------------------------
-
