@@ -190,6 +190,7 @@ class CLuaHandle : public CEventClient
 		bool KeyPress(int key, bool isRepeat) override;
 		bool KeyRelease(int key) override;
 		bool TextInput(const std::string& utf8) override;
+		bool TextEditing(const std::string& utf8, unsigned int start, unsigned int length) override;
 		bool MouseMove(int x, int y, int dx, int dy, int button) override;
 		bool MousePress(int x, int y, int button) override;
 		void MouseRelease(int x, int y, int button) override;
@@ -363,4 +364,3 @@ inline bool CLuaHandle::RunCallInLUS(lua_State* L, std::string* ts, int inArgs, 
 
 
 #endif /* LUA_HANDLE_H */
-
