@@ -2732,4 +2732,3 @@ int LuaUnsyncedRead::GetDecalType(lua_State* L)
 	}
 	return 1;
 }
-
